# my_bot

./: CMakeLists.txt  README.md  generate_grid_world_file.py  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  ultrasonic_sensor.xacro
launch/: launch_sim.launch.py  nav2.launch.py
map/: grid.pgm  grid.yaml  grid_map.pgm  grid_map.yaml  map_server_params.yaml  move_obstacles.py  publish_map.py
my_bot_py/: ultrasonic_relay.py
worlds/: empty.world
